--- a/wcheck.csproj
+++ b/wcheck.csproj
@@ -29,6 +29,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.2" />
+    <PackageReference Include="DocumentFormat.OpenXml.Features" Version="3.0.2" />
     <PackageReference Include="Dragablz" Version="0.0.3.234" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
     <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
